--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,13 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/javascript/index.js"></script>
   </head>
-  <body>
+  <body onload="init()">
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <input id="artistInput" name="artistInput" type="text">
+    <input id="trackInput" name="trackInput" type="text">
+    <input id="findSimilar" type="submit" value="Find" >
+    <pre id="similarSongs"></pre>
   </body>
 </html>
