--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
   </head>
   <body onload="init()">
     <h1><%= title %></h1>
-    <input id="artistInput" name="artistInput" type="text">
-    <input id="trackInput" name="trackInput" type="text">
+    <input id="artistInput" name="artistInput" type="text" placeholder="artist">
+    <input id="trackInput" name="trackInput" type="text" placeholder="song">
     <input id="findSimilar" type="submit" value="Find" >
     <pre id="similarSongs"></pre>
   </body>
