--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,11 @@
     <head>
         <title><%= title %></title>
 
-        <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
 
         <link rel='stylesheet' href='/stylesheets/style.css'/>
         <script src="/javascript/index.js"></script>
-        <script src="/javascript/treeSquare.js"></script>
+
 
     </head>
 
@@ -77,7 +77,7 @@
             font-size: 102%;
             font-weight: bold;
             margin-top: 8px;
-            font-size:11px !important;
+            font-size:11px !important;s
         }
         .textdiv p{
             line-height: 13px;
@@ -93,6 +93,7 @@
 
         <link rel="stylesheet" href="/stylesheets/treestyle.css"/>
         <script src="/javascript/tree.js"></script>
+        <script src="/javascript/treeSquare.js"></script>
 
         <h1><%= title %></h1>
         <input id="artistInput" name="artistInput" type="text" placeholder="artist">
