--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,96 +1,20 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
     <head>
         <title><%= title %></title>
-        <script src="https://d3js.org/d3.v4.min.js"></script>
         <link rel='stylesheet' href='/stylesheets/style.css'/>
+        <link rel="stylesheet" href="/stylesheets/treestyle.css"/>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="/javascript/index.js"></script>
     </head>
-
-    <style>
-        #chart {
-            max-width: 100%;
-            overflow:auto;
-        }
-        text {
-            pointer-events: none;
-        }
-        .grandparent text {
-            font-weight: bold;
-        }
-        rect {
-            stroke: #fff;
-            stroke-width: 1px;
-        }
-        rect.parent,
-        .grandparent rect {
-            stroke-width: 3px;
-        }
-        .grandparent:hover rect {
-            fill: grey;
-        }
-        .children rect.parent,
-        .grandparent rect {
-            cursor: pointer;
-        }
-        .children rect.child {
-            opacity: 0;
-        }
-        .children rect.parent {
-        }
-        .children:hover rect.child {
-            opacity: 1;
-            stroke-width: 1px;
-        }
-        .children:hover rect.parent {
-            opacity: 0;
-        }
-        .legend {
-            margin-bottom:8px !important;
-        }
-        .legend rect {
-            stroke-width: 0px;
-        }
-        .legend text {
-            text-anchor: middle;
-            pointer-events: auto;
-            font-size: 13px;
-            font-family: sans-serif;
-            fill: black;
-        }
-        .form-group {
-            text-align:left;
-        }
-        .textdiv {
-            font-family: "Open Sans",Helvetica,Arial,sans-serif;
-            font-size: 14px;
-            padding: 7px;
-            cursor: pointer;
-            overflow:none;
-        }
-        .textdiv .title {
-            font-size: 102%;
-            font-weight: bold;
-            margin-top: 8px;
-            font-size:11px !important;s
-        }
-        .textdiv p{
-            line-height: 13px;
-            margin:0 0 4px !important;
-            padding:0px;
-            font-size:10px !important;
-        }
-    </style>
-    <p id="chart"></p>
     <body onload="init()">
-        <link rel="stylesheet" href="/stylesheets/treestyle.css"/>
-        <script src="/javascript/tree.js"></script>
-        <script src="/javascript/treeSquare.js"></script>
         <h1><%= title %></h1>
         <input id="artistInput" name="artistInput" type="text" placeholder="artist">
         <input id="trackInput" name="trackInput" type="text" placeholder="song">
         <input id="findSimilar" type="submit" value="Find">
+        <p id="chart"></p>
+        <script src="/javascript/tree.js"></script>
+        <script src="/javascript/treeSquare.js"></script>
         <pre id="similarSongs"></pre>
     </body>
 </html>
