tree gets redrawn instead of appends

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
         <input id="trackInput" name="trackInput" type="text" placeholder="song">
         <input id="findSimilar" type="submit" value="Find">
         <p id="chart"></p>
+        <p id = "treeChart"></p>
         <script src="/javascript/tree.js"></script>
         <script src="/javascript/treeSquare.js"></script>
         <pre id="similarSongs"></pre>
