Now with more wikipedia

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,7 @@
 
         <div style="text-align:center">
             <h1><%= title %></h1>
-            <input id="artistInput" name="artistInput" type="text" placeholder="artist">
-            <input id="trackInput" name="trackInput" type="text" placeholder="song">
+            <input id="pageTitle" name="pageTitle" type="text" placeholder="title">
             <input id="findSimilar" type="submit" value="Find">
         </div>
 
