--- a/views/index.ejs
+++ b/views/index.ejs
@@ -157,14 +157,8 @@
                 <script src="/javascript/treeSquare.js"></script>
             </div>
 
-            <div style="width: 50%; float:right">
-                <p id = "treeChart"></p>
-                <script src="/javascript/tree.js"></script>
-            </div>
+            <div id="timeline" class="timeline" style="width: 50%; float: right"></div>
         </div>
-
-        <div id= "timeline" class="timeline"></div>
-
 
         <pre id="test"></pre>
     </body>
