--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@ text {
   font-weight: bold;
 }
 rect {
-  stroke: #fff;
+  stroke: #EEEEFF;
   stroke-width: 1px;
 }
 rect.parent,
@@ -26,7 +26,7 @@ rect.parent,
   stroke-width: 3px;
 }
 .grandparent:hover rect {
-  fill: grey;
+  fill: #B4B8AB;
 }
 .children rect.parent,
 .grandparent rect {
