--- a/public/stylesheets/timelinestyle.css
+++ b/public/stylesheets/timelinestyle.css
@@ -21,7 +21,7 @@ body {
     position: absolute;
     width: 6px;
     background-color: white;
-    top: 0;
+    top: 70px;
     bottom: 0;
     left: 50%;
     margin-left: -3px;
