Added cool project name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 
 
         <div id = "treemap" style="width: 50%; float:left">
-            <h1 style="color:whitesmoke">Wiki Article Search</h1>
+            <h1 style="color:whitesmoke; font-size: 250%; font-family: 'Lucida Console'">The Cite Site</h1>
             <input id="pageTitle" name="pageTitle" type="text" placeholder="Enter Article">
             <input id="findSimilar" type="submit" value="Find">
             <p id="chart"></p>
