--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,16 +6,11 @@
         <link rel="stylesheet" href="/stylesheets/timelinestyle.css"/>
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="/javascript/index.js"></script>
-
-
     </head>
     <body onload="init()">
-
-        <div style="text-align:center">
-
+    <form action="/aboutus" method="get""><button type="submit">About This Project</button></form>
+    <div style="text-align:center">
         </div>
-
-
         <div id = "treemap" style="width: 50%; float:left">
             <h1 style="color:whitesmoke; font-size: 250%; font-family: 'Lucida Console'">The Cite Site</h1>
             <input id="pageTitle" name="pageTitle" type="text" placeholder="Enter Article">
@@ -23,10 +18,7 @@
             <p id="chart"></p>
             <script src="/javascript/treeSquare.js"></script>
         </div>
-
         <div id="timeline" class="timeline" style="width: 50%; float: right"></div>
-
-
         <pre id="test"></pre>
     </body>
 </html>
